
[TestApply/should_preview_migrations,_when_dry-run_is_enabled - 1]
20240115123045_conduit_initial_schema

Pending 20240115123045_conduit_initial_schema

1 pending migrations (dry run)

---

[TestInit/should_initialise_migration_directory,_when_custom_migrations_dir_is_specified - 1]
database:
  url: <Any value>
migrations:
  dir: custom

---

[TestInit/should_initialise_migration_directory,_when_custom_migrations_dir_is_specified - 2]
### conduit.sum ###
cf28a36ac69eb894
### custom/20240115123045_conduit_initial_schema.up.sql ###
CREATE TABLE IF NOT EXISTS conduit_migrations (
  id BIGSERIAL NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  version VARCHAR(255) NOT NULL,
  name VARCHAR(4095) NOT NULL,
  hash VARCHAR(64) NOT NULL,
  PRIMARY KEY (id),
  UNIQUE (version, name)
);


---

[TestInit/should_initialise_migration_directory,_when_custom_migrations_dir_is_specified - 3]
Created custom
Created custom/20240115123045_conduit_initial_schema.up.sql
Created conduit.yaml
Created conduit.sum

Initialised conduit in custom

---

[TestInit/should_initialise_migration_directory,_when_using_default_settings - 1]
database:
  url: <Any value>
migrations:
  dir: migrations

---

[TestInit/should_initialise_migration_directory,_when_using_default_settings - 2]
### conduit.sum ###
cf28a36ac69eb894
### migrations/20240115123045_conduit_initial_schema.up.sql ###
CREATE TABLE IF NOT EXISTS conduit_migrations (
  id BIGSERIAL NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  version VARCHAR(255) NOT NULL,
  name VARCHAR(4095) NOT NULL,
  hash VARCHAR(64) NOT NULL,
  PRIMARY KEY (id),
  UNIQUE (version, name)
);


---

[TestInit/should_initialise_migration_directory,_when_using_default_settings - 3]
Created migrations
Created migrations/20240115123045_conduit_initial_schema.up.sql
Created conduit.yaml
Created conduit.sum

Initialised conduit in migrations

---

[TestDump/should_dump_schema_DDL - 1]
-- Code generated by conduit via pg-schema-diff.
-- versions:
--    conduit: devel

CREATE TABLE "public"."posts" (
    "id" bigint NOT NULL GENERATED ALWAYS AS IDENTITY (INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START WITH 1 CACHE 1 NO CYCLE),
    "user_id" bigint NOT NULL,
    "title" text COLLATE "pg_catalog"."default" NOT NULL
);

CREATE UNIQUE INDEX posts_pkey ON public.posts USING btree (id);

ALTER TABLE "public"."posts" ADD CONSTRAINT "posts_pkey" PRIMARY KEY USING INDEX "posts_pkey";

CREATE TABLE "public"."users" (
    "id" bigint NOT NULL GENERATED ALWAYS AS IDENTITY (INCREMENT BY 1 MINVALUE 1 MAXVALUE 9223372036854775807 START WITH 1 CACHE 1 NO CYCLE),
    "name" text COLLATE "pg_catalog"."default" NOT NULL
);

CREATE UNIQUE INDEX users_pkey ON public.users USING btree (id);

ALTER TABLE "public"."users" ADD CONSTRAINT "users_pkey" PRIMARY KEY USING INDEX "users_pkey";

ALTER TABLE "public"."posts" ADD CONSTRAINT "posts_user_id_fkey" FOREIGN KEY (user_id) REFERENCES users(id) NOT VALID;

ALTER TABLE "public"."posts" VALIDATE CONSTRAINT "posts_user_id_fkey";

---

[TestApply/should_apply_migrations_up - 1]
Applied 20240115123045_conduit_initial_schema (0ms)

Applied 1 migrations in 0ms

---

[TestDiff/should_create_migration_file,_when_schema_diff_exists - 1]
### conduit.sum ###
f6c50a7ae962fbe8
### migrations/20240115123045_add_posts.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### migrations/20240115123045_conduit_initial_schema.up.sql ###
CREATE TABLE IF NOT EXISTS conduit_migrations (
  id BIGSERIAL NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  version VARCHAR(255) NOT NULL,
  name VARCHAR(4095) NOT NULL,
  hash VARCHAR(64) NOT NULL,
  PRIMARY KEY (id),
  UNIQUE (version, name)
);

### schema.sql ###
CREATE TABLE posts (id int, user_id int);

---

[TestDiff/should_create_migration_file,_when_schema_diff_exists - 2]
Created migrations/20240115123045_add_posts.up.sql
Updated conduit.sum

---

[TestInitDiffApply - 1]
### conduit.sum ###
f0bcc902127233f6
### migrations/20240115123045_add_tables_1.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."posts" (
    "id" integer,
    "user_id" integer
);

### migrations/20240115123045_add_tables_2.up.sql ###
-- Code generated by conduit via pg-schema-diff. DO NOT EDIT.
-- versions:
--    conduit: devel
-- source: schema.sql

SET statement_timeout = '3000ms';
SET lock_timeout = '3000ms';

CREATE TABLE "public"."users" (
    "id" integer
);

### migrations/20240115123045_conduit_initial_schema.up.sql ###
CREATE TABLE IF NOT EXISTS conduit_migrations (
  id BIGSERIAL NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  version VARCHAR(255) NOT NULL,
  name VARCHAR(4095) NOT NULL,
  hash VARCHAR(64) NOT NULL,
  PRIMARY KEY (id),
  UNIQUE (version, name)
);

### schema.sql ###
CREATE TABLE users (id int);
CREATE TABLE posts (id int, user_id int);

---

[TestInitDiffApply - 2]
Created migrations/20240115123045_add_tables_1.up.sql
Created migrations/20240115123045_add_tables_2.up.sql
Updated conduit.sum

Applied 20240115123045_add_tables_1 (0ms)
Applied 20240115123045_add_tables_2 (0ms)
Applied 20240115123045_conduit_initial_schema (0ms)

Applied 3 migrations in 0ms

---

[TestDiff/should_report_no_changes,_when_schema_is_already_in_sync - 1]
No schema changes detected.

---
